--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -32,10 +32,10 @@
             success.
           </p>
           <button class="btn start mr-20 p-20">Start Your Journey</button>
-          <button class="btn learn">Learn More</button>
+          <button class="btn learn  p-20">Learn More</button>
         </div>
         <div class="hero-image">
-          <img src="/imgs/hero-section-img.png" alt="Hero image" />
+          <img src="imgs/hero-section-img.png" alt="Hero image" />
         </div>
         <div class="clear"></div>
       </div>
@@ -143,7 +143,7 @@
           <div class="testimonial-card p-20 blue-style float-left">
             <div class="testimonial-header">
               <div class="user-image float-left">
-                <img src="/imgs/avatar-1.jpg" alt="David Martinez" />
+                <img src="imgs/avatar-1.jpg" alt="David Martinez" />
               </div>
               <div class="user-info float-right">
                 <h4>David Martinez</h4>
@@ -162,7 +162,7 @@
           <div class="testimonial-card p-20 green-style float-left m-inline">
             <div class="testimonial-header">
               <div class="user-image float-left">
-                <img src="/imgs/avatar-2.jpg" alt="David Martinez" />
+                <img src="imgs/avatar-2.jpg" alt="David Martinez" />
               </div>
               <div class="user-info float-right">
                 <h4>Mike Chen</h4>
@@ -181,7 +181,7 @@
           <div class="testimonial-card p-20 purple-style float-right">
             <div class="testimonial-header">
               <div class="user-image float-left">
-                <img src="/imgs/avatar-3.jpg" alt="David Martinez" />
+                <img src="imgs/avatar-3.jpg" alt="David Martinez" />
               </div>
               <div class="user-info float-right">
                 <h4>James Rodriguez</h4>
