assignment two FitCore Gym

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
     <title>FitCore Gym</title>
   </head>
   <body>
@@ -32,7 +33,7 @@
             success.
           </p>
           <button class="btn start mr-20 p-20">Start Your Journey</button>
-          <button class="btn learn  p-20">Learn More</button>
+          <button class="btn learn p-20">Learn More</button>
         </div>
         <div class="hero-image">
           <img src="imgs/hero-section-img.png" alt="Hero image" />
@@ -274,7 +275,6 @@
             <div class="form-group">
               <label for="fitnessg">Fitness Goals</label>
               <textarea
-              
                 id="fitnessg"
                 value="fitnessg"
                 placeholder="Tell us about your fitness goals and what you hope to achieve"
@@ -293,7 +293,7 @@
         </div>
       </div>
     </section>
-    <footer class="p-block-50 ">
+    <footer class="p-block-50">
       <div class="container">
         <div class="contact-us p-20">
           <div class="foot-content">
