--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
               <input
                 type="text"
                 id="fName"
+                value="fName"
                 placeholder="Enter your first name"
               />
             </div>
@@ -246,6 +247,7 @@
               <input
                 type="text"
                 id="lName"
+                value="lName"
                 placeholder="Enter your last name"
               />
             </div>
@@ -253,6 +255,7 @@
             <div class="form-group">
               <label for="emailAdd">Email Address</label>
               <input
+              value="emailAdd"
                 type="email"
                 id="emailAdd"
                 placeholder="your.email@example.com"
@@ -260,7 +263,7 @@
             </div>
             <div class="form-group">
               <label for="phoneNum">Phone Number</label>
-              <input type="tel" id="phoneNum" placeholder="(555) 123-4567" />
+              <input value="phoneNum" type="tel" id="phoneNum" placeholder="(555) 123-4567" />
             </div>
             <div class="form-group">
               <label for="memberType">Membership Type</label>
