--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <input
                 type="text"
                 id="fName"
-                value="fName"
+ 
                 placeholder="Enter your first name"
               />
             </div>
@@ -247,7 +247,7 @@
               <input
                 type="text"
                 id="lName"
-                value="lName"
+          
                 placeholder="Enter your last name"
               />
             </div>
@@ -255,7 +255,7 @@
             <div class="form-group">
               <label for="emailAdd">Email Address</label>
               <input
-              value="emailAdd"
+             
                 type="email"
                 id="emailAdd"
                 placeholder="your.email@example.com"
@@ -263,7 +263,7 @@
             </div>
             <div class="form-group">
               <label for="phoneNum">Phone Number</label>
-              <input value="phoneNum" type="tel" id="phoneNum" placeholder="(555) 123-4567" />
+              <input  type="tel" id="phoneNum" placeholder="(555) 123-4567" />
             </div>
             <div class="form-group">
               <label for="memberType">Membership Type</label>
