Update inputs names

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
       rel="stylesheet"
-    />
+      />
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -14,8 +14,8 @@
       integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
+      />
+    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon" />
     <title>FitCore Gym</title>
   </head>
   <body>
@@ -238,32 +238,37 @@
               <input
                 type="text"
                 id="fName"
- 
+                name="fName"
                 placeholder="Enter your first name"
-              />
+                />
             </div>
             <div class="form-group last-name float-right">
               <label for="lName">Last Name</label>
               <input
                 type="text"
                 id="lName"
-          
+                name="lName"
                 placeholder="Enter your last name"
-              />
+                />
             </div>
             <div class="clear"></div>
             <div class="form-group">
               <label for="emailAdd">Email Address</label>
               <input
-             
+                name="email"
                 type="email"
                 id="emailAdd"
                 placeholder="your.email@example.com"
-              />
+                />
             </div>
             <div class="form-group">
               <label for="phoneNum">Phone Number</label>
-              <input  type="tel" id="phoneNum" placeholder="(555) 123-4567" />
+              <input
+                type="tel"
+                name="phoneNum"
+                id="phoneNum"
+                placeholder="(555) 123-4567"
+                />
             </div>
             <div class="form-group">
               <label for="memberType">Membership Type</label>
@@ -278,18 +283,17 @@
             <div class="form-group">
               <label for="fitnessg">Fitness Goals</label>
               <textarea
+              name="fitnessg"
                 id="fitnessg"
                 value="fitnessg"
-                placeholder="Tell us about your fitness goals and what you hope to achieve"
-              ></textarea>
+                placeholder="Tell us about your fitness goals and what you hope to achieve"></textarea>
             </div>
             <div class="form-submit">
               <button type="submit" class="mr-block-20 p-20">
                 Join FitCore Today
               </button>
               <p class="form-rules">
-                By submitting this form, you agree to our terms of service and
-                privacy policy.
+                By submitting this form, you agree to our terms of service and privacy policy.
               </p>
             </div>
           </form>
@@ -310,21 +314,10 @@
                 </p>
               </div>
               <div class="social-media text-gray">
-                <span
-                  ><a href="https://www.facebook.com/" target="_blank"
-                    >Facebook</a
-                  ></span
-                >
-                <span class="mr-inline-15"
-                  ><a href="https://www.instagram.com/" target="_blank"
-                    >Instagram</a
-                  ></span
-                >
-                <span
-                  ><a href="https://x.com/?lang=en" target="_blank"
-                    >Twitter</a
-                  ></span
-                >
+                <span><a href="https://www.facebook.com/" target="_blank">Facebook</a></span>
+                <span class="mr-inline-15"><a href="https://www.instagram.com/"
+                    target="_blank">Instagram</a></span>
+                <span><a href="https://x.com/?lang=en" target="_blank">Twitter</a></span>
               </div>
             </div>
             <div class="quick-links float-left">
