--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="clear"></div>
         </div>
         <div class="gym-stats">
-          <div class="stat-card float-left">
+          <div class="stat-card p-20 float-left">
             <h2>2500+</h2>
             <p>Active Members</p>
           </div>
